<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mybackground"
    tools:context=".ui.detail.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@id/tv_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/mybackground"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mybackground">

                <ImageView
                    android:id="@+id/img_header_detail"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/image_header_detail"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dummyphoto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    android:tint="@color/yellowelement"
                    app:layout_constraintBottom_toBottomOf="@id/img_header_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/favo_button"
                    app:rippleColor="@color/yellowelement" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_poster_detail"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.1">

                    <ImageView
                        android:id="@+id/img_poster_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_poster_detail"
                        android:src="@drawable/dummy_poster" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/movie_title"
                    android:textColor="@color/yellowelement"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_poster_detail"
                    app:layout_constraintTop_toBottomOf="@id/img_header_detail" />

                <TextView
                    android:id="@+id/tv_rate_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/_8_1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24"
                    app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />

                <!-- <TextView
                     android:id="@+id/tv_duration_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/roboto_light"
                     android:gravity="center"
                     android:text="@string/_2h_16m"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                     app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                     app:layout_constraintTop_toBottomOf="@id/tv_rate_detail" />-->

                <TextView
                    android:id="@+id/tv_release_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/_10_05_2018_us"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
                    app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_rate_detail" />

                <!--<TextView
                    android:id="@+id/tv_genre_detail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/drama_romance_music"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_release_detail" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                app:titleTextColor="@color/yellow_item" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/lorem"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_desc_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_detail"
                android:contentDescription="@string/sharebutton"/>

            <!--    <Button
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tv_desc_detail"
                    app:layout_constraintStart_toStartOf="@id/tv_desc_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_desc_detail" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>